# factorio-agents

./: .coop-seed  .gitignore  EVAL-PLAN.md  EVALUATION.md  FINDINGS.md  FLE-USAGE.md  LEADERBOARD.md  LEARNINGS.md  PLAN.md  README.md  RESEARCH.md  ROADMAP.md  S1-BIBLE.md  SCORING.md  SEGMENTS.md  STRATEGY.md  TLDR.md  WR-PACE.md  arena.py  bake_scenario.py  bible_stats.py  coop-seed.txt  coop_scoreboard.py  coop_unstick.py  dashboard.py  decisions.py  experiment.py  gauntlet-night.jsonl  league_report.py  league_s1.sh  loadsave_test.sh  make_wave2.py  night_gauntlet.sh  probe_dupe_audit.py  probe_legal.py  probe_skills.py  pyproject.toml  route-champ-peak.json  route-champ-peak.jsonl  route-champions-night1.jsonl  (+16 more)
configs/: bench-0.json  bench-1.json  bench-2.json  coop-human.json  solo-opus.json  solo-sonnet.json  sprint-fable-skills.json  sprint-haiku-skills.json  sprint-sonnet-plain.json  sprint-sonnet-skills.json  stage1-base-a.json  stage1-base-b.json  stage1-base-c.json  stage1-base-d.json  stage1-pace.json  stage1-powerpack.json  stage1-w00-base.json  stage1-w01-base.json  stage1-w02-base.json  stage1-w03-base.json  stage1-w04-pace.json  stage1-w05-pace.json  stage1-w06-pace.json  stage1-w07-powerpack.json  stage1-w08-powerpack.json  stage1-w09-powerpack.json  stage1-x00-base.json  stage1-x01-base.json  stage1-x02-base.json  stage1-x03-base.json  stage1-x04-cad10.json  stage1-x05-cad10.json  stage1-x06-cad10.json  stage1-x07-cad45.json  stage1-x08-cad45.json  stage1-x09-cad45.json  trio-haiku.json  vs-human.json  vs-sonnet-advised.json  vs-sonnet-haiku.json  (+2 more)
(+2 files in other folders)
